Update Sai Sumanth Mydham.html

--- a/Sai Sumanth Mydham.html
+++ b/Sai Sumanth Mydham.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="banner-flex">
                     <div class="image">
-                        <img src="C:\Users\sai sumanth mydham\OneDrive\Desktop\test jupyter\portfolio\passportpic.jpeg" alt="">
+                        <img src="passportpic.jpeg" alt="">
                     </div>
                     <div class="text">
                         <h3>Hi there, </h3>
@@ -30,13 +30,16 @@
                 <h2>About Me</h2>
                 <div class="personal">
                 <h3>Personal Details</h3>
+                </div>
+                <ol>    
                 <li>Full Name : <span>Sai Sumanth Mydham</span></li>
                 <li>Phone Number : <span>9390661173</span></li>
                 <li>E-mail : <span>sumanthsai492@gmail.com</span></li>
                 <li>Age : <span>20</span></li>
                 <li>sex : <span>Male</span></li>
                 <li>Nationality : <span>Indian</span></li>
-                </div>
+                </ol>
+                
 
                 <div class="education">
                     <h3>Educational Details</h3>
